--- a/sleepytime_clone.css
+++ b/sleepytime_clone.css
@@ -1,7 +1,3 @@
-div {
-    transition: transform 200ms, opacity 200ms; transition-timing-function: linear;
-}
-
 body {
     background-color: #001F3F; color: #7FDBFF; height: 1000px;
 }
@@ -72,15 +68,6 @@ select {
     font-size: 180%;
 }
 
-.returnBtn {
-    text-transform: uppercase;
-    border-radius: 20px;
-    color: #001F3F;
-    height: 37px;
-    width: 135px;
-    border-width: 0px;
-    cursor: pointer;
-    font-size: 100%;
-    font-weight: 600;
-    font-family: Raleway;
+.calculateAgain {
+    font-size: 180%;
 }
